--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
         </nav>
 
         <!-- Page Content -->
-        <div class="w-full p-5" id="content-area">
+        <div class="w-full p-5 h-[80vh]" id="content-area">
             {% block content %}{% endblock %}
         </div>
 
